# Historical-Market-data-From-Zerodha

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Jupyter_file.ipynb  Pyzdata.py  README.md  SBIN 2020 to 2024.csv  SECURITY.md  app.py  instrument.py  interval.py  login.py  pyproject.toml  requirements-dev.txt  run.py  setup.py  stock_data.py  stockdata.py
.github/workflows/: publish.yml  tests.yml
.ipynb_checkpoints/: Jupyter_file-checkpoint.ipynb
.streamlit/: config.toml
pyzdata/: __init__.py  _app.py  auth.py  cli.py  client.py  config.py  downloader.py  exceptions.py  instruments.py  models.py  pyzdata.py  run_web.py
tests/: conftest.py  test_app_helpers.py  test_auth.py  test_cli.py  test_config.py  test_downloader.py  test_instruments.py  test_throttle.py
