[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzdata"
version = "1.0.4"
description = "Indian Historical Market Data Downloader from Zerodha"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vikas Sharma", email = "Jnv2252@Gmail.com" }
]
requires-python = ">=3.10"
keywords = ["zerodha", "kite", "market-data", "ohlcv", "trading", "finance", "india"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0",
    "requests>=2.25.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
# Web interface: pip install "pyzdata[web]"
web = [
    "streamlit>=1.20.0",
    "openpyxl>=3.0.0",
]
# Development / testing: pip install "pyzdata[dev]"
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage   = "https://github.com/vikassharma545/Historical-Market-data-From-Zerodha"
Repository = "https://github.com/vikassharma545/Historical-Market-data-From-Zerodha"
Issues     = "https://github.com/vikassharma545/Historical-Market-data-From-Zerodha/issues"

[project.scripts]
pyzdata     = "pyzdata.cli:main"
pyzdata-web = "pyzdata.run_web:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyzdata*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (optional linting — install with: pip install ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
