[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzdata"
version = "1.0.6"
description = "Indian Historical Market Data Downloader from Zerodha"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Vikas Sharma", email = "Jnv2252@Gmail.com" }
]
requires-python = ">=3.10"
keywords = ["zerodha", "kite", "market-data", "ohlcv", "trading", "finance", "india"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=2.3.0",
    "requests>=2.32.0",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
# Web interface: pip install "pyzdata[web]"
web = [
    "streamlit>=1.50.0",
]
# Development / testing: pip install "pyzdata[dev]"
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage   = "https://github.com/vikassharma545/Historical-Market-data-From-Zerodha"
Repository = "https://github.com/vikassharma545/Historical-Market-data-From-Zerodha"
Issues     = "https://github.com/vikassharma545/Historical-Market-data-From-Zerodha/issues"

[project.scripts]
pyzdata     = "pyzdata.cli:main"
pyzdata-web = "pyzdata.run_web:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyzdata*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-v --tb=short"

# ---------------------------------------------------------------------------
# ruff (optional linting — install with: pip install ruff)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
